v7.4
-----


v7.3
-----
+ Added an option to hide games in search results you've marked as "Not Interested"
+ Added a column to the market showing the current lowest price of active listings
: Fixed a bug in the feature that shows the purchase date on a game's store page
: Updated 3rd party DRM detection to include more places that publishers hide it
: Updated PCGW button to include new link structure and new icon
- Removed redundant SteamTrades profile link

v7.2.1
-----
+ Added the number of gems required for each game on the Booster Pack Creator dropdown
+ Added an option to enable or disable the 1-Click turn to gems function
: Fixed numerous small bugs and localization issues

v7.2
-----
+ Added Newegg and GamesRepublic to the price history lookups
+ Added SteamRep status to user's profiles
+ Added button to "1-Click" turning inventory items to Gems (be careful!)
+ Added a search filter that hides games without discounts
+ Added a feature that hides empty inventory tabs (thanks zillazillaaaa!)
+ Added an option to show "Compare" links on friend activity page (disabled by default)
: Fixed a bug in currency detection for booster pack prices
- Removed library functionality due to API changes made by Valve

v7.1.1
-----
: Fixed badge page sorting options to work with pagination
: Fixed a bug that caused coupon messages not to display properly
: Fixed a bug that caused the account total spent feature not to work correctly
: Fixed the feature that shows achievements on the "All Games" page

v7.1
-----
+ Added a box to search pages that lets you hide games you own, on your wishlist, or in cart
+ Added ACRTAG warning messages to sub pages
+ Added the ability to remove games from your wishlist from the game's app page
+ Added a button to toggle the "Write a review for this game" section on app pages
: Fixed drop count calculation to work with new badge page pagination
: Fixed badge page filtering and sort options to work with pagination